# school-21

./: .gitmodules  README.md
fillit/: Makefile  author  fillit  fillit.c  fillit.h  map.c  map.h  read.c  read.h  solver.c  solver.h  test_tetros.txt  test_tetros2.txt  tetramino.c  tetramino.h  validation.c  validation.h
fillit_final/: Makefile  author  fillit  fillit.c  fillit.h  map.c  map.h  read.c  read.h  solver.c  solver.h  tetramino.c  tetramino.h  validation.c  validation.h
fillit_work/: CMakeLists.txt  a.out  fillit.c  fillit.h  main.c  map.c  map.h  map.h.gch  read.c  read.h  solver.c  solver.h  solver.h.gch  test.txt  tetramino.c  tetramino.h  tetramino.h.gch  validation.c  validation.h  validation.h.gch
fillit_work/includes/: fillit.h  map.h  read.h  solver.h  tetramino.h  validation.h
fillit_work/libft/: ft_isspace.c
fillit_work/src/: fillit.c  main.c  map.c  read.c  solver.c  tetramino.c  validation.c
fillit_work/test_tetros/: test.txt  test1.txt  test_one_figure.txt
ft_printf/: 123  CMakeLists.txt  Makefile  alignment.c  d_delimeter.c  flag_align.c  flag_char.c  flag_int.c  flag_percent.c  ft_change_base.c  ft_printf.c  ft_printf.h  main.c  parse_flags.c
ft_printf_final/: CMakeLists.txt  main.c
ft_printf_final/srcs/: flag_double.c  flag_int.c  flag_precision.c
ft_printf_work/: Makefile  main.c
gnl/: CMakeLists.txt  a.out  get_next_line.c  get_next_line.h  get_next_line.h.gch  gnl_to_free_or_not_to_free.txt  gnltest.c  main.c  (+1 more)
gnlTest/libft/: CMakeLists.txt  Makefile  a.out  ft_atoi.c  ft_bzero.c  ft_check_end_spaces.c  ft_check_start_spaces.c  ft_isalnum.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_num_of_digits.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_str_is_lowercase.c  ft_str_is_numeric.c  ft_str_is_printable.c  ft_str_is_uppercase.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  (+25 more)
(+264 files in other folders)
